Fixed spacing

--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@
         left: -761px;
         width: 363px;
         float: left;
-        bottom: -183px;
+        bottom: -182px;
         height: 260px;
         
     }
